--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -19,7 +19,7 @@
 <body>
     <h2>CSV Upload</h2>
     <form action="/upload" method="post" enctype="multipart/form-data">
-        <input type="file" name="csv_file" accept=".csv">
+        <input type="file" name="input_file" accept=".csv,.tsv">
         <input type="submit" value="Upload">
     </form>
 
